I fix the overflow ploblem

--- a/Profile Card Component Main/css/style.css
+++ b/Profile Card Component Main/css/style.css
@@ -16,6 +16,7 @@
 }
 body {
     background-color: var(--dark-cyan);
+    overflow: hidden;
 }
 main {
     display: flex;
